deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: sample
  replicas: 4
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: newdoinacr.azurecr.io/ahc-app:1.0
        ports:
        - containerPort: 80
