service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  labels:
    app: sample
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: sample
