ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: sample
            port:
              number: 80
        pathType: Prefix
